Nav appearance on mobiles has been fixed.

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -234,7 +234,7 @@ body {
 	position: sticky;
 	top: 0;
 	display: none;
-	grid-template-rows: 3fr 1fr;
+	grid-template-rows: 1fr;
 	grid-template-columns: repeat(8, 1fr);
 	align-items: center;
 	width: 100vw;
@@ -255,7 +255,7 @@ body {
 		// margin: 0 auto;
 		grid-row: 1 / 2;
 		grid-column: 1 / 9;
-		font-size: 2.4rem;
+		font-size: 2.2rem;
 		text-align: center;
 		letter-spacing: 10px;
 	}
@@ -323,15 +323,27 @@ body {
 		background-image: url(/dist/img/french.jpg);
 	}
 
-	&__results {
+	&__bottom-container {
+		display: grid;
 		grid-row: 2 / 3;
-		grid-column: 1 / 5;
-		border-right: 2px solid rgba(46, 79, 79, 0.4);
+		grid-column: 1 / -1;
+		width: 100%;
+		grid-template-columns: 1fr 1fr;
+		grid-template-rows: 1fr;
+
+		&__results {
+			grid-row: 1 / 2;
+			grid-column: 1 / 2;
+			border-right: 2px solid rgba(46, 79, 79, 0.4);
+		}
+		&__table {
+			grid-row: 1 / 2;
+			grid-column: 2 / 3;
+		}
 	}
-	&__table {
-		grid-row: 2 / 3;
-		grid-column: 5 / -1;
-	}
+
+
+
 
 	&__results,
 	&__table {
@@ -339,6 +351,7 @@ body {
 		align-items: center;
 		justify-content: center;
 		height: 100%;
+		width: 100%;
 		color: #2e4f4f;
 		background-color: #fff;
 		font-family: inherit;
